# piccione

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  resume.sh  tsconfig.json  vitest.config.ts
.gitea/workflows/: ci.yaml
.github/workflows/: ci.yml  release.yml
docs/: BACKUPS-DESIGN.md  FEATURE-MATRIX.md  GROUPS-DESIGN.md  HANDOFF.md  PARITY.md
e2e/: app.spec.ts
inbox/: OVERNIGHT-STATUS.md  contremaitre-recon.md  memory-accounting.md  presage-linking-research.md  security-review-v0.1.0.md  storage-service-research.md  swarm-gitea-ci.md  swarm-keychain-sender.md  swarm-modifiers.md  swarm-pairing-fix.md  swarm-quickwins.md  swarm-ui-polish.md  voice-calls-STATUS.md  voice-impl-plan.md
scripts/: check-port.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: piccione_cli.rs
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  lib.rs  main.rs  pair_flow.rs  settings.rs
src-tauri/src/backups/: mod.rs
src-tauri/src/calling/: manager.rs  mod.rs  signaling.rs
src-tauri/src/commands/: account.rs  calling.rs  messaging.rs  mod.rs  provisioning.rs  settings.rs
src-tauri/src/messaging/: mod.rs  parse.rs  service.rs  types.rs
src-tauri/src/provisioning/: error.rs  manager.rs  mod.rs  qr.rs  state.rs
src-tauri/src/store/: keychain.rs
src-tauri/tests/: bin_passphrase_source.rs  integration_test.rs  store_diagnostic.rs
src/__tests__/: App.test.ts  ChatLayout.test.ts  LinkDevice.test.ts  QrCode.test.ts  checkPort.test.ts  format.test.ts  messagingStore.test.ts  toasts.test.ts
src/lib/: format.ts  types.ts
src/lib/components/: CallOverlay.svelte  ChatLayout.svelte  LinkDevice.svelte  MediaBrowser.svelte  QrCode.svelte  Settings.svelte  ToastContainer.svelte
src/lib/stores/: calling.svelte.ts  messaging.svelte.ts  provisioning.svelte.ts  settings.svelte.ts  toasts.svelte.ts
