[package]
name = "signalui"
version = "0.0.1"
edition = "2021"
default-run = "signalui"

[lib]
name = "signalui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "signalui"
path = "src/main.rs"

[[bin]]
name = "signalui-cli"
path = "src/bin/signalui_cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
presage = { git = "https://github.com/whisperfish/presage", branch = "main" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", branch = "main" }
qrcode = { version = "0.14", default-features = false, features = ["svg", "image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
futures = "0.3"
url = "2"
security-framework = "3"
rand = "0.8"
hex = "0.4"
uuid = "1"
mime_guess = "2"
prost = "0.13"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
mockall = "0.13"

[features]
test = ["tauri/test"]

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
libsqlite3-sys = { version = "0.36.0", git = "https://github.com/whisperfish/rusqlite", rev = "2a42b3354c9194700d08aa070f70a131a470e7dc" }
