[package]
name = "piccione"
version = "0.3.0"
edition = "2021"
default-run = "piccione"

[lib]
name = "piccione_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "piccione"
path = "src/main.rs"

# CLI helper for pair/paired/devices subcommands. Moved to examples/ so
# Tauri's bundler (which auto-packages every [[bin]] regardless of feature
# gating) leaves it alone. Invoke with:
#   cargo run --example piccione_cli -- pair --device-name MyDevice
[[example]]
name = "piccione_cli"
path = "examples/piccione_cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
presage = { git = "https://github.com/whisperfish/presage", branch = "main" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", branch = "main" }
qrcode = { version = "0.14", default-features = false, features = ["svg", "image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
futures = "0.3"
url = "2"
rand = "0.8"
hex = "0.4"
uuid = "1"
mime_guess = "2"
prost = "0.13"
clap = { version = "4", features = ["derive"] }

# Voice calls. RingRTC is Signal's own Rust WebRTC engine. The
# prebuilt_webrtc feature makes its build.rs download a prebuilt
# libwebrtc.a from build-artifacts.signal.org instead of compiling
# Chromium — verified working on macOS/Linux/Windows (Phase-0 spike).
# Needs PREBUILT_WEBRTC=1 in the build env (see CI + README).
ringrtc = { git = "https://github.com/signalapp/ringrtc", tag = "v2.69.0", features = ["prebuilt_webrtc"] }
log = "0.4"  # ringrtc::webrtc::logging::set_logger wants a log::LevelFilter

# mimalloc as global allocator. macOS default malloc holds onto freed pages
# very aggressively, inflating RSS after one-shot allocations like the
# Storage-Service contact sync. mimalloc with the default "purge after idle"
# behaviour returns pages to the OS, cutting steady-state RSS by ~30-50%.
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
mockall = "0.13"

[features]
test = ["tauri/test"]

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
libsqlite3-sys = { version = "0.36.0", git = "https://github.com/whisperfish/rusqlite", rev = "2a42b3354c9194700d08aa070f70a131a470e7dc" }

# Local checkouts for the storage-service work-in-progress.
# Removed before pushing upstream; both branches will be PR'd to whisperfish.
[patch."https://github.com/whisperfish/presage"]
presage = { path = "../../presage/presage" }
presage-store-sqlite = { path = "../../presage/presage-store-sqlite" }

[patch."https://github.com/whisperfish/libsignal-service-rs"]
libsignal-service = { path = "../../libsignal-service-rs" }

[profile.release]
# Tighter binary + slightly lower RSS for the consumer-shipped build.
# lto=fat enables full link-time optimisation across crate boundaries
# (saves ~10-15%% binary size, helps inlining hot loops).
# codegen-units=1 produces a single compilation unit, lets the optimiser
# see across the whole crate — smaller binary, longer build (~2x).
# strip=symbols drops debuginfo from the binary itself; backtraces still
# work via dSYM if we want.
lto = "fat"
codegen-units = 1
strip = "symbols"
